Time: 18 ms (81.49%), Space: 94.5 MB (46.17%) - LeetHub